Fixed some layout issues with the poster feed on the bottom. Now images don't overflow their borders

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,6 +62,7 @@ h1,h3 {
     height: 450px;
     .icon {
       max-height: 300px;
+      max-width: 100%;
       margin-right: auto;
       margin-left: auto;
     }
